# simpleboxmodel

./: pyproject.toml
simpleboxmodel/: scenario.py
simpleboxmodel/models/: pollutant.py  process.py  room.py
simpleboxmodel/models/covid/: __init__.py  activity.py  agent.py  population.py
simpleboxmodel/models/wildfire/: event.py
