[tool.poetry]
name = "simpleboxmodel"
version = "0.0.1"
description = "A python implementation of a simple box mindoor air quality concerns around COVID-19 and wildfire smoke."
authors = ["Thomas Tu <tt169@humboldt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
pydantic = "^1.8.1"
tqdm = "^4.59.0"
matplotlib = "^3.3.4"
scipy = "^1.6.1"
altair = "^4.1.0"
altair-saver = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
jupyterlab = "^3.0.9"
ipykernel = "^5.5.0"
black = "^20.8b1"
tabulate = "^0.8.9"
openpyxl = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
